# ckanext-presencas

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test.ini
ckanext/presencas/: plugin.py
ckanext/presencas/assets/: presencas.css  presencas.js  webassets.yml
ckanext/presencas/templates/snippets/: facet_list.html
ckanext/presencas/tests/: test_plugin.py
