[metadata]
name = ckanext-presencas
version = 1.0.3
description = Extensão para adicionar novos filtros para o CKAN e adicionar um filtro com slider de intervalo para data de início.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thiagoc01/ckanext-presencas
author = Thiago Castro
author_email = thiagofc99@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             presencas = ckanext.presencas.plugin:PresencasPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/presencas/i18n/ckanext-presencas.pot
width = 80

[init_catalog]
domain = ckanext-presencas
input_file = ckanext/presencas/i18n/ckanext-presencas.pot
output_dir = ckanext/presencas/i18n

[update_catalog]
domain = ckanext-presencas
input_file = ckanext/presencas/i18n/ckanext-presencas.pot
output_dir = ckanext/presencas/i18n
previous = true

[compile_catalog]
domain = ckanext-presencas
directory = ckanext/presencas/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
